--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "airsm-device-front",
   "version": "0.1.0",
   "private": true,
-  "proxy":"http://localhost:8000",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
@@ -21,7 +20,7 @@
     "websocket": "^1.0.34"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=8082 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
